<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/newEventCreatingFragment"
        android:icon="@drawable/add2"
        android:title="@string/create_event_menu_item"
        app:showAsAction="always" />
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/refresh"
        android:title="@string/refresh"
        app:showAsAction="always" />
    <item
        android:title="@string/signout"
        android:id="@+id/Signout"
        android:icon="@drawable/exit"
        app:showAsAction="always" />
    <item
        android:title="@string/filter_by_city_country"
        android:id="@+id/filter_by_city_and_country"
        app:showAsAction="never" />
    <item
        android:title="@string/my_events"
        android:id="@+id/show_my_events"
        app:showAsAction="never" />
    <item
        android:title="@string/all_events"
        android:id="@+id/get_all_events"
        app:showAsAction="never" />
    <item
        android:title="@string/about"
        android:id="@+id/about"
        app:showAsAction="never" />

</menu>